<resources>
    <string name="app_name">Transpose</string>
    <string name="add_button_text">Add</string>
    <string name="korean_popular_Top100_playlist_text">Korean Popular Songs</string>
    <string name="American_popular_Top100_playlist_text">American Popular Songs</string>
    <string name="Indonesian_popular_Top100_playlist_text">Indonesian Popular Songs</string>
    <string name="nation_playlist_text">National</string>
    <string name="American_playlist_text">America Playlist</string>
    <string name="Global_popular_Top100_playlist_text">Global Popular Songs</string>
    <string name="Recommended_playlist_text">Recommended</string>
    <string name="Type_based_playlist_text">Typed</string>
    <string name="this_year_playlist_text">This Year Music</string>
    <string name="today_hot_list_playlist_text">Today Hot List</string>
    <string name="latest_music_playlist_text">Latest Music Playlist</string>
    <string name="best_atmosphere_playlist_text">Best Atmosphere Playlist</string>
    <string name="best_situation_playlist_text">Best Situation Playlist</string>
    <string name="pitch_text">Pitch</string>
    <string name="tempo_text">Tempo</string>
    <string name="searchView_hint">Youtube Search</string>
    <string name="my_audio_file_searchView_hint">My Audio File Search</string>
    <string name="my_video_file_searchView_hint">My Video File Search</string>
    <string name="home_icon">Home</string>
    <string name="convert_icon">Convert</string>
    <string name="library_icon">Library</string>
    <string name="network_error_message">Please check the Internet connection</string>
    <string name="add_playlist_text">New playlist</string>
    <string name="title_hint">title</string>
    <string name="dialog_create_text">create</string>
    <string name="dialog_cancel_text">cancel</string>
    <string name="channel_video_count">video counts: %d</string>
    <string name="video_pop_up_menu_add_playlist_text">Add to playlist</string>
    <string name="delete_video_from_playlist_pop_up_menu_text">Remove from playlist</string>
    <string name="delete_video_from_device_pop_up_menu_text">Delete from device</string>
    <string name="my_playlist_pop_up_menu_delete_playlist_text">Delete playlist</string>
    <string name="publish_date_second">%dseconds ago</string>
    <string name="publish_date_minute">%dminutes ago</string>
    <string name="publish_date_hour">%dhours ago</string>
    <string name="publish_date_day">%ddays ago</string>
    <string name="publish_date_month">%dmonths ago</string>
    <string name="publish_date_year">%dyears ago</string>
    <string name="view_count_under_thousand">%s views</string>
    <string name="view_count_over_thousand">%sk views</string>
    <string name="view_count_over_hundred_thousand">%sk views</string>
    <string name="view_count_over_million">%sM views</string>
    <string name="view_count_over_hundred_million">%sM views</string>
    <string name="view_count_over_billion">%sB views</string>
    <string name="subscriber_count_under_thousand">%s</string>
    <string name="subscriber_count_over_thousand">%sk</string>
    <string name="subscriber_count_over_hundred_thousand">%sk</string>
    <string name="subscriber_count_over_million">%sM</string>
    <string name="subscriber_count_over_hundred_million">%sM</string>
    <string name="subscriber_count_over_billion">%sB</string>
    <string name="playlist_text">"Playlist: %s"</string>
    <string name="playlist_item_empty_text">Empty</string>
    <string name="quota_error_message">App has exceeded the daily limit for accessing YouTube.\n
    We are sorry for the inconvenience and we kindly ask you to try again tomorrow.</string>
    <string name="refresh_text">Refresh</string>
    <string name="pitch_plus_text">Increase pitch. Current state: %1.1f</string>
    <string name="pitch_minus_text">Decrease pitch. Current state: %1.1f</string>
    <string name="pitch_initialize_text">Reset pitch. Current state: %1.1f</string>
    <string name="tempo_plus_text">Increase tempo. Current state: %1.1f</string>
    <string name="tempo_minus_text">Decrease tempo. Current state: %1.1f</string>
    <string name="tempo_init_text">Reset tempo. Current state: %1.1f</string>
    <string name="load_fail_message">failed to load</string>
    <string name="network_error_text">A network connection error has occurred.\n Please verify your connection and press the refresh button.</string>
    <string name="notification">I\'m currently facing issues with retrieving YouTube search data in the app. \n\nI have reached out to the YouTube team for help, but I\'m not sure when I\'ll get a response. \n\nRest assured, I\'ll provide an update as soon as this issue is resolved. \n\nI apologize for any inconvenience caused."</string>
    <string name="yt_notification">I\'ve managed to temporarily fix the quota issue, but you might notice that the search speed has been reduced. \n\nI sincerely apologize for any inconvenience this may cause.</string>

    <string-array name="publish_date_formats">
        <item>@string/publish_date_second</item>
        <item>@string/publish_date_minute</item>
        <item>@string/publish_date_hour</item>
        <item>@string/publish_date_day</item>
        <item>@string/publish_date_month</item>
        <item>@string/publish_date_year</item>
    </string-array>

    <string-array name="view_count_formats">
        <item>@string/view_count_under_thousand</item>
        <item>@string/view_count_over_thousand</item>
        <item>@string/view_count_over_hundred_thousand</item>
        <item>@string/view_count_over_million</item>
        <item>@string/view_count_over_hundred_million</item>
        <item>@string/view_count_over_billion</item>
    </string-array>

    <string-array name="subscriber_count_formats">
        <item>@string/subscriber_count_under_thousand</item>
        <item>@string/subscriber_count_over_thousand</item>
        <item>@string/subscriber_count_over_hundred_thousand</item>
        <item>@string/subscriber_count_over_million</item>
        <item>@string/subscriber_count_over_hundred_million</item>
        <item>@string/subscriber_count_over_billion</item>
    </string-array>

    <string-array name="equalizer_label">
        <item>@string/equalizer_normal</item>
        <item>@string/equalizer_classic</item>
        <item>@string/equalizer_dance</item>
        <item>@string/equalizer_flat</item>
        <item>@string/equalizer_fork</item>
        <item>@string/equalizer_heavy_metal</item>
        <item>@string/equalizer_hiphop</item>
        <item>@string/equalizer_jazz</item>
        <item>@string/equalizer_pop</item>
    </string-array>


    <string-array name="preset_reverb_labels">
        <item>@string/preset_reverb_none</item>
        <item>@string/preset_reverb_plate</item>
        <item>@string/preset_reverb_medium_hall</item>
        <item>@string/preset_reverb_large_hall</item>
        <item>@string/preset_reverb_large_room</item>
        <item>@string/preset_reverb_medium_room</item>
        <item>@string/preset_reverb_small_room</item>
    </string-array>





    <string name="paste_youtube_link_dialog_title">Share Link</string>
    <string name="paste_youtube_link_dialog_input_button_text">enter</string>
    <string name="paste_youtube_link_dialog_cancel_button_text">cancel</string>
    <string name="paste_youtube_link_dialog_hint_text">Enter the YouTube share link</string>

    <string name="equalizer_normal">Normal</string>
    <string name="equalizer_classic">Classical</string>
    <string name="equalizer_dance">Dance</string>
    <string name="equalizer_flat">Flat(Default)</string>
    <string name="equalizer_fork">Fork</string>
    <string name="equalizer_heavy_metal">Heavy Metal</string>
    <string name="equalizer_hiphop">Hip Hop</string>
    <string name="equalizer_jazz">Jazz</string>
    <string name="equalizer_pop">Pop</string>

    <string name="equalizer_text">Equalizer</string>
    <string name="bass_text">Bass</string>
    <string name="loudness_enhancer_text">Volume Enhancer</string>
    <string name="virtualizer_text">3D Sound Effect</string>
    <string name="preset_reverb_text">Reverb</string>

    <string name="preset_reverb_none">None</string>
    <string name="preset_reverb_plate">Plate</string>
    <string name="preset_reverb_medium_hall">Medium Hall</string>
    <string name="preset_reverb_large_hall">Large Hall</string>
    <string name="preset_reverb_large_room">Large Room</string>
    <string name="preset_reverb_medium_room">Medium Room</string>
    <string name="preset_reverb_small_room">Small Room</string>
    <string name="preset_reverb_waring_text">Note: Reverb effects may not apply on some earphones.</string>
    <string name="preset_reverb_send_level_text">Strength</string>
    <string name="music_storage_button_text">Search My Music</string>
    <string name="video_storage_button_text">Search My Video</string>

    <string name="storage_permission_dialog_title">Required Permission</string>
    <string name="storage_permission_dialog_message">Read Storage permission has been denied. Please manually enable the permission in settings to use this feature</string>
    <string name="storage_permission_dialog_go_settings_text">Go to Settings</string>
    <string name="storage_permission_dialog_cancel_text">Cancel</string>

    <string name="write_storage_permission_dialog_title">Required Permission</string>
    <string name="write_storage_permission_dialog_message">Write Storage permission has been denied. Please manually enable the permission in settings to use this feature</string>
    <string name="write_storage_permission_dialog_go_settings_text">Go to Settings</string>
    <string name="write_storage_permission_dialog_cancel_text">Cancel</string>
    
    <string name="delete_confirmation_dialog_title">Delete Confirmation</string>
    <string name="delete_confirmation_dialog_message">Are you sure you want to delete this file?</string>
    <string name="delete_confirmation_dialog_confirm_text">Yes</string>
    <string name="delete_confirmation_dialog_cancel_text">No</string>

    <string name="my_file_delete_message">The file has been successfully deleted</string>
    <string name="patch_title">Patch Notes</string>
    <string name="app_usage_guide">App Usage Guide</string>
    <string name="patch_description_1">There was an issue with infinite loading. \n\nPlease turn off the video preview setting on the YouTube page.</string>
    <string name="patch_description_2">To address the infinite loading issue, please follow these steps to turn off the video previews on YouTube:\n\n1. Navigate to the YouTube page.\n2. Click on "Settings."\n3. Turn off the "Video Previews" option.\n\nI apologize for the inconvenience.\n I will continue to strive for improvement.</string>
    <string name="patch_description_3">From now on, when saving to a playlist, the currently set audio effects will also be saved.\n\n Please check the current audio effects information before saving.</string>
    <string name="patch_description_4">You can choose not to see the patch notes again by pressing the skip button \nlocated at the bottom left.\n\n If you encounter any errors or have suggestions, please feel free to send them to joh99111@gmail.com.\n Thank you.</string>
    <string name="patch_description_5">The issue with infinite loading on the YouTube page has been successfully resolved. \n\nNow, all functionalities work smoothly without the need to disable the video preview settings. \n\nAdditionally, videos can be played easily through the preview feature without having to click on them directly.</string>
    <string name="patch_description_6">Resolved an issue causing infinite loading \nwhen returning to the YouTube page from another page or home screen.</string>

</resources>