<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/home_icon"
        android:title="@string/home_icon"
        android:icon="@drawable/bottom_navi_home_selector"
        app:showAsAction="always"/>
    <item
        android:id="@+id/transpose_icon"
        android:title="@string/convert_icon"
        android:icon="@drawable/bottom_navi_transpose_selector"
        app:showAsAction="always"/>
    <item
        android:id="@+id/my_playlist_icon"
        android:title="@string/library_icon"
        android:icon="@drawable/bottom_navi_playlist_selector"
        app:showAsAction="always"/>
</menu>