<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/scroll_view_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/nation_playlist_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/nation_playlist_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nation_playlist_text"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:paddingTop="15dp"
                    android:paddingStart="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="10dp"
                    />
                <ProgressBar
                    android:id="@+id/nation_playlist_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="240dp"
                    android:paddingTop="15dp"
                    android:paddingStart="15dp"
                    android:paddingBottom="15dp"
                    android:layout_gravity="center"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/nation_playlist_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginTop="10dp"
                    android:paddingRight="30dp"
                    android:clipToPadding="false"
                    android:visibility="gone"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/recommended_playlist_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/recommended_playlist_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Recommended_playlist_text"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:paddingTop="15dp"
                    android:paddingStart="15dp"
                    android:paddingBottom="15dp"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    />
                <ProgressBar
                    android:id="@+id/recommended_playlist_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:paddingTop="15dp"
                    android:paddingStart="15dp"
                    android:paddingBottom="15dp"
                    android:layout_gravity="center"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recommended_playlist_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:visibility="gone"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/typed_playlist_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/typed_playlist_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Type_based_playlist_text"
                    android:textSize="20dp"
                    android:paddingTop="15dp"
                    android:paddingStart="15dp"
                    android:paddingBottom="15dp"
                    android:textStyle="bold"
                    android:gravity="left"
                    />
                <ProgressBar
                    android:id="@+id/typed_playlist_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:paddingTop="15dp"
                    android:paddingStart="15dp"
                    android:paddingBottom="15dp"
                    android:layout_gravity="center"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/typed_playlist_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginBottom="56dp"
                    android:visibility="gone"
                    />
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/error_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:visibility="invisible"
        >
        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/description_color"
            />
        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/refresh_text"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>